@@ -7041,6 +7041,10 @@ Sort the positional parameters lexicographically.
 .TP 8
 .B \-u
 Treat unset parameters as an error when substituting.
+.B "$@"
+and
+.B "$\(**"
+are exempt.
 .TP 8
 .B \-v
 Print shell input lines as they are read.
